@@ -138,6 +138,8 @@ var localized_strings,
 			loading: "Loading...",
 			using_store: "You are using the Steam store for the __current__ region.",
 			using_store_return: "Click here to go back to the __base__ store.",
+			using_language: "You are browsing Steam in __current__.",
+			using_language_return: "Click here to browse Steam in __base__.",
 			notcommon_label: "Hide games that you own",
 			common_label: "Hide games that you do not own",
 			comparison_mode: "Enable all game overview to see game comparison",
@@ -244,6 +246,7 @@ var localized_strings,
 				hide_about: "Hide \"About\" link",
 				replace_account_name: "Replace account name with community name",
 				show_regionwarning: "Show warning if browsing in non-account region",
+				show_languagewarning: "Show warning if browsing in a language other than",
 				about_text: "<div class=\"header\">About <a href='http://www.enhancedsteam.com'>Enhanced Steam</a>:</div><p>Enhanced Steam is an Extension for Google Chrome that adds many new features to the Steam website.<p>Features include:<ul><li>Highlighting games you already own</li><li>Highlighting games on your wishlist</li><li>Correctly calculating bundle discounts based on games you already own</li><li>Showing you how much money you've spent on Steam for the lifetime of your account</li><li>Highlighting DLC you own on a game page</li><li>Fixing \"No Image Available\" game icons on your wishlist for any game or DLC</li><li>Pointing out titles with 3rd party DRM</li></ul><p>If you find this Extension useful, please consider donating.",
 				changelog: "Changelog:",
 				general: "General",
