@@ -186,6 +186,37 @@
 				<li><input type="checkbox" id="hide_dlcunownedgames"><label for="hide_dlcunownedgames" id="hide_dlcunownedgames_text">DLC for games you do not own</label></li>
 				<li><input type="checkbox" id="hidetmsymbols"><label for="hidetmsymbols" id="hidetmsymbols_text">Trademark and Copyright symbols in game titles</label></li>
 				<li><input type="checkbox" id="hide_early_access"><label for="hide_early_access" id="hide_early_access_text">Hide Early Access games on homepage, browse, and search pages</label></li>
+				<li class="header" id="language_text">Language</li>				
+				<li><input type="checkbox" id="showlanguagewarning"><label for="showlanguagewarning" id="store_show_languagewarning_text">Show warning if browsing in a language other than</label>
+					<select id="warning_language">
+						<option value="English">English</option>
+						<option value="Brazilian">Brazilian</option>
+						<option value="Bulgarian">Bulgarian</option>
+						<option value="Czech">Czech</option>
+						<option value="Danish">Danish</option>
+						<option value="Dutch">Dutch</option>
+						<option value="Finnish">Finnish</option>
+						<option value="French">French</option>
+						<option value="Greek">Greek</option>
+						<option value="German">German</option>
+						<option value="Hungarian">Hungarian</option>
+						<option value="Italian">Italian</option>
+						<option value="Japanese">Japanese</option>
+						<option value="Koreana">Korean</option>
+						<option value="Norwegian">Norwegian</option>
+						<option value="Polish">Polish</option>
+						<option value="Portuguese">Portuguese</option>
+						<option value="Russian">Russian</option>
+						<option value="Romanian">Romanian</option>
+						<option value="Schinese">Simplified Chinese</option>
+						<option value="Spanish">Spanish</option>
+						<option value="Swedish">Swedish</option>
+						<option value="Tchinese">Traditional Chinese</option>
+						<option value="Thai">Thai</option>
+						<option value="Turkish">Turkish</option>
+						<option value="Ukrainian">Ukrainian</option>
+					</select>
+				</li>
 				<li class="header" id="library_text">Library (BETA)</li>
 				<li><input type="checkbox" id="showlibrarymenu"><label for="showlibrarymenu" id="store_show_library_text">Show Library button in header</label></li>
 				<li><input type="checkbox" id="showlibraryf2p"><label for="showlibraryf2p" id="store_show_library_f2p_text">Show played free to play games and demos in library</label></li>
