@@ -1,5 +1,6 @@
 v6.0
 -----
++ Added warning dialog when browsing Steam in a language other than your preferred language
 : Fixed a bug that caused Early Access overlays to incorrectly show on games with coupons
 : Fixed header links inserted by Enhanced Steam not displaying due to a change made by Valve
 : Fixed a bug in entering custom amounts into Steam wallet page
